Start building out documentation.

--- a/doc/intro.adoc
+++ b/doc/intro.adoc
@@ -1,2 +1,11 @@
 
 This is the intro section to muon node.
+
+## RPC
+
+## Streaming
+
+## Extension
+
+### Adding a Discovery
+### Adding a Transport
