First cut streaming client.

--- a/doc/intro.adoc
+++ b/doc/intro.adoc
@@ -3,9 +3,9 @@ This is the intro section to muon node.
 
 ## RPC
 
-## Streaming
+## Reactive Streams
+
+
+
 
 ## Extension
-
-### Adding a Discovery
-### Adding a Transport
