--- a/doc/index.adoc
+++ b/doc/index.adoc
@@ -7,18 +7,18 @@ layout: documentation
 :toc: right
 :toc-title: Muon Node
 :toclevels: 6
-
-# Muon JavaScript
-
-include::node/latest/intro.adoc[leveloffset=+1]
-
-
-
-# Muon Node
+= Muon Node
 
 Muon Node is the implementation of the Muon microservices toolkit, for the Node.js platform. Muon enables you to easily build
 microservices in many languages that have richer, more performant and fully reactive communication semantics and gain access
 to Muon compatible services written in other languages without having to sacrifice the rich semantics or performance.
+
+=== Muon was designed from the ground up with 4 core ideas in mind:
+
+. Communicaiton,transactions and protocols useds are the biggest issues facing microservices
+. easily pluggable protocols (currently rpc, streaming, evnts, pielining)
+. Easily pluggable transports (current supports only amqp)
+. Testing (dev, test and production should not differ)
 
 
 .Contributing
@@ -28,4 +28,30 @@ Contribute to Muon Node and this documentation at http://github.com/muoncore/muo
 ****
 
 
+
+
+== A Microservice based system in 5 minutes
+
+To get up and running you'll need RabbitMQ running for transport, try running our demo VM over here preconfigured for this demo: https://github.com/muoncore/muon-dev-vm
+
+
+open a terminal and run the exmaples service from the muon node project. This will run an example service with several RPC endpoints:
+
+```
+node examples/muon-dev-tools-server.js
+
+```
+
+
+
+now open another terminal window and run a client to test some of the exmaple services:
+
+
+===== echo service
+
+this exmaple service endpoint echos back it's given payload.
+
+```
+node ./examples/dev-tools-echo-client.js
+```
 
